# encodec.cpp

./: .gitignore  CMakeLists.txt  Makefile  README.md  common.cpp  common.h  convert.py  convert_th_to_bin.py  decoder.cpp  decoder.h  encodec.cpp  encodec.h  encoder.cpp  encoder.h  ggml.c  ggml.h  lstm.cpp  lstm.h  main.cpp  ops.cpp  ops.h  quantizer.h  util.h  utils.cpp  utils.h
.github/workflows/: build.yml
examples/: CMakeLists.txt  README.md  common.cpp  common.h
examples/compress/: CMakeLists.txt  main.cpp
examples/debug_conv_transpose/: CMakeLists.txt  main.cpp
examples/decoder_only/: CMakeLists.txt
examples/decompress/: CMakeLists.txt  main.cpp
examples/encoder_only/: CMakeLists.txt  main.cpp
examples/main/: CMakeLists.txt  main.cpp
examples/vocos/: CMakeLists.txt  README.md  convert.py  vocos.cpp
